social media link is added on desktop view, why join font-size, distorted page are fixed

--- a/src/app/shared/components/home-landing/home-landing.component.css
+++ b/src/app/shared/components/home-landing/home-landing.component.css
@@ -99,6 +99,7 @@
   flex-direction: column;
   padding: 0rem 1.25rem;
   gap: 1.5rem;
+  flex-wrap: nowrap;
 }
 
 .rena-box-wrapper2 {
@@ -531,7 +532,7 @@
     flex-direction: row;
     padding: 0rem 2rem;
     gap: 1.5rem;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
   }
 
@@ -550,7 +551,7 @@
     gap: 1rem;
     flex-wrap: wrap;
     margin-bottom: 10rem;
-    width: 100%;
+    /* width: 100%; */
   }
 
   .rena-box-wrapper2 .rena-box {
@@ -648,7 +649,7 @@
   }
 
   .benefit_text {
-    font-size: 0.625rem;
+    font-size: 1rem;
     margin: 0rem;
     padding-left: 0.75rem;
   }
@@ -787,7 +788,7 @@
     flex-direction: row;
     padding: 0rem 2rem;
     gap: 1.5rem;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
   }
 
@@ -796,7 +797,7 @@
   }
 
   .rena-box-wrapper1 .box-text {
-    font-size: 0.85rem;
+    font-size: 0.875rem;
   }
 
   .rena-box-wrapper2 {
@@ -831,7 +832,7 @@
   }
 
   .box-text {
-    font-size: 0.85rem;
+    font-size: 0.875rem;
   }
 
   .image-group {
@@ -904,7 +905,7 @@
   }
 
   .benefit_text {
-    font-size: 0.625rem;
+    font-size: 1rem;
     margin: 0rem;
     padding-left: 0.75rem;
   }
